--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.profiles.active=local
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/data/springdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+#jdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
