--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,8 @@
 spring.profiles.active=test
 
+spring.datasource.url=jdbc:h2:tcp://localhost/~/data/springdb
+spring.datasource.username=sa
+spring.datasource.password=
+
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
