테스트 - 데이터베이스 분리

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=test
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/data/springdb
+spring.datasource.url=jdbc:h2:tcp://localhost/~/data/testcase
 spring.datasource.username=sa
 spring.datasource.password=
 
