--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,10 @@
 spring.profiles.active=test
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/data/testcase
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/data/testcase
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
+
+spring.datasource.generate-unique-name=false
