--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ logging.level.org.springframework.jdbc=debug
 #MyBatis
 mybatis.type-aliases-package=hello.itemservice.domain
 mybatis.configuration.map-underscore-to-camel-case=true
-logging.level.hello.itemservice.repository.mybatis=true
+logging.level.hello.itemservice.repository.mybatis=trace
+mybatis.mapper-locations=classpath:mapper/**/*.xml
