--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,4 +12,5 @@ spring.datasource.generate-unique-name=false
 #MyBatis
 mybatis.type-aliases-package=hello.itemservice.domain
 mybatis.configuration.map-underscore-to-camel-case=true
-logging.level.hello.itemservice.repository.mybatis=true
+logging.level.hello.itemservice.repository.mybatis=trace
+mybatis.mapper-locations=classpath:mapper/*.xml
