트랜잭션 적용 확인

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -18,3 +18,5 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 #JPA log
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.org.springframework.transaction.interceptor=TRACE
