--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.profiles.active=local
 spring.datasource.url=jdbc:h2:tcp://localhost/~/data/springdb
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
 
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
